--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "wangxu.bmp"
+  avatar           : "wangxu.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
