--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wangxu-scu/wangxu-scu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
-words_per_minute         : 1600
-read_more                : "enabled" # if enabled, adds "Read more" links to excerpts; if disabled, no "Read more" links to excerpts
+words_per_minute         : 160
+read_more                : "disabled" # if enabled, adds "Read more" links to excerpts; if disabled, no "Read more" links to excerpts
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
