--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   bio              : "PhD candidate, College of Computer Science, Sichuan University"
   location         : "Chengdu, China"
   employer         :
-  googlescholar    : "xxxx"
+  googlescholar    : "https://scholar.google.com/citations?user=XTOXhy4AAAAJ&hl=zh-CN"
   email            :
   uri              :
   bitbucket        :
