--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   bio              : "PhD candidate, College of Computer Science, Sichuan University"
   location         : "Chengdu, China"
   employer         :
-  googlescholar    : "https://scholar.google.com/citations?user=XTOXhy4AAAAJ&hl=zh-CN"
+  googlescholar    : #"https://scholar.google.com/citations?user=XTOXhy4AAAAJ&hl=zh-CN"
   email            :
   uri              :
   bitbucket        :
@@ -92,19 +92,19 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "wangxu-scu"
+  github           : #"wangxu-scu"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
